Add system RNG randombytes.c & Update CMake to use OpenSSL RNG only when building KAT

--- a/reference_implementation/kat/CMakeLists.txt
+++ b/reference_implementation/kat/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(kat_srcs
-    kat_kem.c
+    ${PROJECT_SOURCE_DIR}/kat/kat_kem.c
+    ${PROJECT_SOURCE_DIR}/src/rng.c
 )
 
 find_package(OpenSSL REQUIRED)
