Add PQC_bench.c from KPQClean

--- a/reference_implementation/Makefile
+++ b/reference_implementation/Makefile
@@ -20,11 +20,13 @@ HEADERSKECCAK = $(HEADERS) $(INCDIR)/fips202.h
 INCLUDE = -I./$(INCDIR)
 
 SOURCES_MAIN = $(SOURCESKECCAK) $(MAINDIR)/main.c $(SRCDIR)/randombytes.c
-SOURCES_SPEED = $(SOURCESKECCAK) $(BENCHDIR)/speed.c $(BENCHDIR)/cpucycles.c $(BENCHDIR)/speed_print.c $(SRCDIR)/randombytes.c
 SOURCES_KAT = $(SOURCESKECCAK) $(KATDIR)/kat_kem.c $(KATDIR)/PQCgenKAT_kem.c $(SRCDIR)/rng.c
+SOURCES_SPEED = $(SOURCESKECCAK) $(BENCHDIR)/PQC_bench.c $(SRCDIR)/randombytes.c
+#SOURCES_SPEED = $(SOURCESKECCAK) $(BENCHDIR)/speed.c $(BENCHDIR)/cpucycles.c $(BENCHDIR)/speed_print.c $(SRCDIR)/randombytes.c
 
 all: \
-	main
+	main \
+	speed \
 
 shared: \
 	smaug1.so \
