Apply AVX Keccak to optimization (#3)
* Add keccakx4(times4) files

* Add fips202x4 wrapper from Kyber

* Add keccak assembly files

* Add fips202 wrapper for keccak assembly implemented based on liboqs

* Update CMake to link fips202 avx

* Apply shake128, shake256, sha3_256 avx implementation

* Update dg sampling to use keccakx4

* Update fips202 NAMESPACE

* Update Makefile for optimized implemenation

* Update .clang-format

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 build/
+smaug1-main
+smaug3-main
+smaug5-main
+smaug1-speed
+smaug3-speed
+smaug5-speed
+PQCgenKAT_smaug1
+PQCgenKAT_smaug3
+PQCgenKAT_smaug5
