--- a/optimized_implementation/Makefile
+++ b/optimized_implementation/Makefile
@@ -9,20 +9,20 @@ CC ?= /usr/bin/cc
 RM = /bin/rm
 
 
-CFLAGS = -mtune=native -O3 -fomit-frame-pointer
+CFLAGS = -mtune=native -O3 -fomit-frame-pointer -mavx2
 DFLAGS = -g3 -DDEBUG
 
 SOURCES = $(SRCDIR)/ciphertext.c $(SRCDIR)/dg.c $(SRCDIR)/hash.c $(SRCDIR)/hwt.c $(SRCDIR)/indcpa.c $(SRCDIR)/io.c $(SRCDIR)/kem.c $(SRCDIR)/key.c $(SRCDIR)/pack.c $(SRCDIR)/poly.c $(SRCDIR)/verify.c
-SOURCESKECCAK = $(SOURCES) $(SRCDIR)/fips202.c
+SOURCESKECCAK = $(SOURCES) $(SRCDIR)/fips202.c $(SRCDIR)/fips202x4.c $(SRCDIR)/fips202avx.c $(SRCDIR)/keccak/KeccakP-1600-times4-SIMD256.c $(SRCDIR)/keccak/KeccakP-1600-AVX2.S
 
 HEADERS = $(INCDIR)/ciphertext.h $(INCDIR)/dg.h $(INCDIR)/hash.h $(INCDIR)/hwt.h $(INCDIR)/indcpa.h $(INCDIR)/io.h $(INCDIR)/kem.h $(INCDIR)/key.h $(INCDIR)/pack.h $(INCDIR)/poly.h $(INCDIR)/verify.h
-HEADERSKECCAK = $(HEADERS) $(INCDIR)/fips202.h
-INCLUDE = -I./$(INCDIR)
+HEADERSKECCAK = $(HEADERS) $(INCDIR)/fips202.h $(INCDIR)/fips202x4.h $(INCDIR)/fips202avx.h
+INCLUDE = -I./$(INCDIR) -I./$(INCDIR)/keccak
 
 SOURCES_MAIN = $(SOURCESKECCAK) $(MAINDIR)/main.c $(SRCDIR)/randombytes.c
 SOURCES_KAT = $(SOURCESKECCAK) $(KATDIR)/kat_kem.c $(KATDIR)/PQCgenKAT_kem.c $(SRCDIR)/rng.c
 SOURCES_SPEED = $(SOURCESKECCAK) $(BENCHDIR)/PQC_bench.c $(SRCDIR)/randombytes.c
-#SOURCES_SPEED = $(SOURCESKECCAK) $(BENCHDIR)/speed.c $(BENCHDIR)/cpucycles.c $(BENCHDIR)/speed_print.c $(SRCDIR)/randombytes.c
+# SOURCES_SPEED = $(SOURCESKECCAK) $(BENCHDIR)/speed.c $(BENCHDIR)/cpucycles.c $(BENCHDIR)/speed_print.c $(SRCDIR)/randombytes.c
 
 all: \
 	main \
