--- a/optimized_implementation/Makefile
+++ b/optimized_implementation/Makefile
@@ -13,10 +13,10 @@ CFLAGS = -march=native -mtune=native -O3 -fomit-frame-pointer -mavx2
 DFLAGS = -g3 -DDEBUG
 
 SOURCES = $(SRCDIR)/ciphertext.c $(SRCDIR)/dg.c $(SRCDIR)/hash.c $(SRCDIR)/hwt.c $(SRCDIR)/indcpa.c $(SRCDIR)/io.c $(SRCDIR)/kem.c $(SRCDIR)/key.c $(SRCDIR)/pack.c $(SRCDIR)/poly.c $(SRCDIR)/verify.c
-SOURCESKECCAK = $(SOURCES) $(SRCDIR)/fips202.c $(SRCDIR)/fips202x4.c $(SRCDIR)/fips202avx.c $(SRCDIR)/keccak/KeccakP-1600-times4-SIMD256.c $(SRCDIR)/keccak/KeccakP-1600-AVX2.S
+SOURCESKECCAK = $(SOURCES) $(SRCDIR)/fips202x4.c $(SRCDIR)/fips202.c $(SRCDIR)/keccak/KeccakP-1600-times4-SIMD256.c $(SRCDIR)/keccak/KeccakP-1600-AVX2.S
 
 HEADERS = $(INCDIR)/ciphertext.h $(INCDIR)/dg.h $(INCDIR)/hash.h $(INCDIR)/hwt.h $(INCDIR)/indcpa.h $(INCDIR)/io.h $(INCDIR)/kem.h $(INCDIR)/key.h $(INCDIR)/pack.h $(INCDIR)/poly.h $(INCDIR)/verify.h
-HEADERSKECCAK = $(HEADERS) $(INCDIR)/fips202.h $(INCDIR)/fips202x4.h $(INCDIR)/fips202avx.h
+HEADERSKECCAK = $(HEADERS) $(INCDIR)/fips202x4.h $(INCDIR)/fips202.h
 INCLUDE = -I./$(INCDIR) -I./$(INCDIR)/keccak
 
 SOURCES_MAIN = $(SOURCESKECCAK) $(MAINDIR)/main.c $(SRCDIR)/randombytes.c
