--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ smaug5-speed
 PQCgenKAT_smaug1
 PQCgenKAT_smaug3
 PQCgenKAT_smaug5
+smaug1-main-90s
+smaug3-main-90s
+smaug5-main-90s
+smaug1-speed-90s
+smaug3-speed-90s
+smaug5-speed-90s
+PQCgenKAT_smaug1-90s
+PQCgenKAT_smaug3-90s
+PQCgenKAT_smaug5-90s
