--- a/optimized_implementation/kem/kat/CMakeLists.txt
+++ b/optimized_implementation/kem/kat/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(OpenSSL REQUIRED)
 set(KAT_KEM_LIB_NAME1 ${PROJECT_NAME}1-kat-kem)
 add_library(${KAT_KEM_LIB_NAME1} SHARED ${kat_srcs})
 target_include_directories(${KAT_KEM_LIB_NAME1} PUBLIC ../include)
-target_compile_definitions(${KAT_KEM_LIB_NAME1} PUBLIC CRYPTO_ALGNAME="SMAUG1_KEM")
+target_compile_definitions(${KAT_KEM_LIB_NAME1} PUBLIC CRYPTO_ALGNAME="SMAUG-T1_KEM")
 target_compile_definitions(${KAT_KEM_LIB_NAME1} PUBLIC SMAUG_MODE=1)
 
 add_executable(${LIB_NAME1}-kat PQCgenKAT_kem.c)
@@ -19,7 +19,7 @@ target_link_libraries(${LIB_NAME1}-kat ${KAT_KEM_LIB_NAME1} ${LIB_NAME1} OpenSSL
 set(KAT_KEM_LIB_NAME3 ${PROJECT_NAME}3-kat-kem)
 add_library(${KAT_KEM_LIB_NAME3} SHARED ${kat_srcs})
 target_include_directories(${KAT_KEM_LIB_NAME3} PUBLIC ../include)
-target_compile_definitions(${KAT_KEM_LIB_NAME3} PUBLIC CRYPTO_ALGNAME="SMAUG3_KEM")
+target_compile_definitions(${KAT_KEM_LIB_NAME3} PUBLIC CRYPTO_ALGNAME="SMAUG-T3_KEM")
 target_compile_definitions(${KAT_KEM_LIB_NAME3} PUBLIC SMAUG_MODE=3)
 
 add_executable(${LIB_NAME3}-kat PQCgenKAT_kem.c)
@@ -29,7 +29,7 @@ target_link_libraries(${LIB_NAME3}-kat ${KAT_KEM_LIB_NAME3} ${LIB_NAME3} OpenSSL
 set(KAT_KEM_LIB_NAME5 ${PROJECT_NAME}5-kat-kem)
 add_library(${KAT_KEM_LIB_NAME5} SHARED ${kat_srcs})
 target_include_directories(${KAT_KEM_LIB_NAME5} PUBLIC ../include)
-target_compile_definitions(${KAT_KEM_LIB_NAME5} PUBLIC CRYPTO_ALGNAME="SMAUG5_KEM")
+target_compile_definitions(${KAT_KEM_LIB_NAME5} PUBLIC CRYPTO_ALGNAME="SMAUG-T5_KEM")
 target_compile_definitions(${KAT_KEM_LIB_NAME5} PUBLIC SMAUG_MODE=5)
 
 add_executable(${LIB_NAME5}-kat PQCgenKAT_kem.c)
