Revert updates after round2 submission (#15)
* Rename SMAUG-T & Update build files and README.md

* Remove KAT files in subdirectory

* Minor update on hwt.c (remove redeclare of i)

* Update hwt headers in optimized implemenation

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 build/
-smaug1-main
-smaug3-main
-smaug5-main
-smaug1-speed
-smaug3-speed
-smaug5-speed
-PQCgenKAT_smaug1
-PQCgenKAT_smaug3
-PQCgenKAT_smaug5
-smaug1-main-90s
-smaug3-main-90s
-smaug5-main-90s
-smaug1-speed-90s
-smaug3-speed-90s
-smaug5-speed-90s
-PQCgenKAT_smaug1-90s
-PQCgenKAT_smaug3-90s
-PQCgenKAT_smaug5-90s
+smaug-t1-main
+smaug-t3-main
+smaug-t5-main
+smaug-t1-speed
+smaug-t3-speed
+smaug-t5-speed
+PQCgenKAT_smaug-t1
+PQCgenKAT_smaug-t3
+PQCgenKAT_smaug-t5
+smaug-t1-main-90s
+smaug-t3-main-90s
+smaug-t5-main-90s
+smaug-t1-speed-90s
+smaug-t3-speed-90s
+smaug-t5-speed-90s
+PQCgenKAT_smaug-t1-90s
+PQCgenKAT_smaug-t3-90s
+PQCgenKAT_smaug-t5-90s
 
 timer-main
 timer-speed
