Apply AVX2 Keccak to TiMER parameter (#27)
Merge pull request #27 from CryptoLabInc/timer-avx2-keccak (author:wjdclrhs)

* Update include files

* Apply keccakx4 to dg sampling

* Add fips202 asm, fips202x4 wrappers

* Set keccak include path in CMake

* Update shake256 to asm in hwt sampling

--- a/additional_implementation/TiMER_optimized_implemenation/CMakeLists.txt
+++ b/additional_implementation/TiMER_optimized_implemenation/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
-project(TiMER LANGUAGES C CXX) # CXX for google test
+project(TiMER LANGUAGES C CXX ASM) # CXX for google test
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
@@ -21,7 +21,7 @@ if(NOT CMAKE_BUILD_TYPE MATCHES Release)
   )
 endif(NOT CMAKE_BUILD_TYPE MATCHES Release)
 
-set(srcs
+set(SRCS
     ${PROJECT_SOURCE_DIR}/src/dg.c
     ${PROJECT_SOURCE_DIR}/src/pack.c
     ${PROJECT_SOURCE_DIR}/src/poly.c
@@ -35,6 +35,16 @@ set(srcs
     ${PROJECT_SOURCE_DIR}/src/verify.c
 )
 
+set(SRCS_RNG
+  ${PROJECT_SOURCE_DIR}/src/randombytes.c)
+
+set(SRCS_FIPS202
+    ${PROJECT_SOURCE_DIR}/src/keccak/KeccakP-1600-times4-SIMD256.c
+    ${PROJECT_SOURCE_DIR}/src/keccak/KeccakP-1600-AVX2.S
+    ${PROJECT_SOURCE_DIR}/src/fips202x4.c
+    ${PROJECT_SOURCE_DIR}/src/fips202.c
+)
+
 if(MSVC)
   set(C_FLAGS /nologo /O2 /W4 /wd4146 /wd4244)
 else()
@@ -44,13 +54,14 @@ endif()
 find_package(OpenSSL REQUIRED)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/include/keccak)
 
 set(LIB_RNG RNG)
-add_library(${LIB_RNG} ${LIB_FIPS202} SHARED ${PROJECT_SOURCE_DIR}/src/randombytes.c)
+add_library(${LIB_RNG} SHARED ${SRCS_RNG})
 target_compile_options(${LIB_RNG} PRIVATE -O3 -fomit-frame-pointer -fPIC -mavx2 -mbmi2 -mpopcnt)
 
 set(LIB_FIPS202 FIPS202)
-add_library(${LIB_FIPS202} SHARED ${PROJECT_SOURCE_DIR}/src/fips202.c)
+add_library(${LIB_FIPS202} SHARED ${SRCS_FIPS202})
 target_compile_options(${LIB_FIPS202} PRIVATE -O3 -fomit-frame-pointer -fPIC -mavx2 -mbmi2 -mpopcnt)
 
 option(ENABLE_CLANG_TIDY "Enable clang-tidy during build" OFF)
@@ -58,7 +69,7 @@ if(ENABLE_CLANG_TIDY)
   find_program(CLANG_TIDY_EXECUTABLE clang-tidy)
 
   if(CLANG_TIDY_EXECUTABLE)
-    set(SOURCE_FILES_TO_CHECK ${srcs})
+    set(SOURCE_FILES_TO_CHECK ${SRCS})
 
     add_custom_target(clang-tidy
       COMMAND ${CLANG_TIDY_EXECUTABLE}
@@ -77,7 +88,7 @@ if(ENABLE_CPPCHECK)
   find_program(CPPCHECK_EXECUTABLE cppcheck)
 
   if(CPPCHECK_EXECUTABLE)
-    set(SOURCE_FILES_TO_CHECK ${srcs})
+    set(SOURCE_FILES_TO_CHECK ${SRCS})
     set(CPPCHECK_OUTPUT_FILE "${CMAKE_BINARY_DIR}/cppcheck_results.xml") # Output file path
 
     add_custom_target(cppcheck
@@ -97,7 +108,7 @@ endif()
 
 
 set(LIB_NAME1 ${PROJECT_NAME})
-add_library(${LIB_NAME1} SHARED ${srcs})
+add_library(${LIB_NAME1} SHARED ${SRCS})
 target_compile_definitions(${LIB_NAME1} PUBLIC TIMER_MODE=1)
 target_compile_options(${LIB_NAME1} PRIVATE ${C_FLAGS})
 target_link_libraries(${LIB_NAME1} PUBLIC ${LIB_RNG} ${LIB_FIPS202})
