Toomcook multiplication for reference implementation (#39)
* Remove sppoly & update poly to signed int

* Update packing & IO of secret key

* Add toomcook codes from Saber

* Fix memory init value

* Update KAT (apply coefficient representation of sk)

* Remove unnecessary APIs in poly.h

* Unify division

* Add toomcook to CMake build & fix warning

* Declare variables at the top

* Update unit test (apply coeff representation of sk & coeff multiplication)

--- a/reference_implementation/CMakeLists.txt
+++ b/reference_implementation/CMakeLists.txt
@@ -33,6 +33,7 @@ set(srcs
     ${PROJECT_SOURCE_DIR}/src/indcpa.c
     ${PROJECT_SOURCE_DIR}/src/hash.c
     ${PROJECT_SOURCE_DIR}/src/verify.c
+    ${PROJECT_SOURCE_DIR}/src/toomcook.c
 )
 
 if(MSVC)
