Modfied CBD sampling (#43)
* Use modified CBD to gen ephemeral secret

* Divide use case of CBD according to each security level

* Add cbd to CMake build (UnitTest passed)

* Update the order of access to buf

--- a/reference_implementation/CMakeLists.txt
+++ b/reference_implementation/CMakeLists.txt
@@ -34,6 +34,7 @@ set(srcs
     ${PROJECT_SOURCE_DIR}/src/hash.c
     ${PROJECT_SOURCE_DIR}/src/verify.c
     ${PROJECT_SOURCE_DIR}/src/toomcook.c
+    ${PROJECT_SOURCE_DIR}/src/cbd.c
 )
 
 if(MSVC)
