Apply coeff representation (mult, hwt) & Parameter update to AVX2  (#53)
* Convert to  representation -ciphertext

* Minor update of seed name in ref/dg.c

* Update opt/kem (apply changes in ref)

* Add CBD & ToomCook to opt/kem

* Add EOF to ref/kem.h 

* Fix pack, poly

* Update KAT (same with the res of ref in main)

* Update cmake in opt/kem

* Update opt/90s (apply changes in ref)

* Add toomcook & cbd sources to 90s

* Add signed to align & update api in 90s

* Remove including fips202 in cbd & fix hwt in 90s

* Add KAT of 90s parameter

* Revert symbolic link in opt/kem

--- a/optimized_implementation/kem-90s/CMakeLists.txt
+++ b/optimized_implementation/kem-90s/CMakeLists.txt
@@ -32,6 +32,8 @@ set(SRCS
     ${PROJECT_SOURCE_DIR}/src/io.c
     ${PROJECT_SOURCE_DIR}/src/indcpa.c
     ${PROJECT_SOURCE_DIR}/src/verify.c
+    ${PROJECT_SOURCE_DIR}/src/toomcook.c
+    ${PROJECT_SOURCE_DIR}/src/cbd.c
 )
 
 set(SRCS_RNG
