--- a/optimized_implementation/kem/CMakeLists.txt
+++ b/optimized_implementation/kem/CMakeLists.txt
@@ -33,6 +33,8 @@ set(SRCS
     ${PROJECT_SOURCE_DIR}/src/indcpa.c
     ${PROJECT_SOURCE_DIR}/src/hash.c
     ${PROJECT_SOURCE_DIR}/src/verify.c
+    ${PROJECT_SOURCE_DIR}/src/toomcook.c
+    ${PROJECT_SOURCE_DIR}/src/cbd.c
 )
 
 set(SRCS_RNG
