Update TiMER reference implementation (#54)
* TiMER 레퍼런스 구현 업데이트

* Update TiMER reference & Apply changes in main (author: wjdclrhs)

* Update KAT vectors of TiMER

* Remove executable files

* Add CI for TiMER reference

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["reference_implementation", "optimized_implementation/kem", "optimized_implementation/kem-90s"]
+        version: ["reference_implementation", "optimized_implementation/kem", "optimized_implementation/kem-90s", "additional_implementation/TiMER_reference_implementation"]
     steps:
     - name: Check out repository code
       uses: actions/checkout@v4
