--- a/additional_implementation/TiMER_reference_implementation/Makefile
+++ b/additional_implementation/TiMER_reference_implementation/Makefile
@@ -12,10 +12,10 @@ RM = /bin/rm
 CFLAGS = -mtune=native -O3 -fomit-frame-pointer
 DFLAGS = -g3 -DDEBUG
 
-SOURCES = $(SRCDIR)/ciphertext.c $(SRCDIR)/dg.c $(SRCDIR)/hash.c $(SRCDIR)/hwt.c $(SRCDIR)/indcpa.c $(SRCDIR)/io.c $(SRCDIR)/kem.c $(SRCDIR)/key.c $(SRCDIR)/pack.c $(SRCDIR)/poly.c $(SRCDIR)/verify.c
+SOURCES = $(SRCDIR)/ciphertext.c $(SRCDIR)/dg.c $(SRCDIR)/hash.c $(SRCDIR)/hwt.c $(SRCDIR)/indcpa.c $(SRCDIR)/io.c $(SRCDIR)/kem.c $(SRCDIR)/key.c $(SRCDIR)/pack.c $(SRCDIR)/poly.c $(SRCDIR)/verify.c $(SRCDIR)/toomcook.c $(SRCDIR)/cbd.c
 SOURCESKECCAK = $(SOURCES) $(SRCDIR)/fips202.c
 
-HEADERS = $(INCDIR)/ciphertext.h $(INCDIR)/dg.h $(INCDIR)/hash.h $(INCDIR)/hwt.h $(INCDIR)/indcpa.h $(INCDIR)/io.h $(INCDIR)/kem.h $(INCDIR)/key.h $(INCDIR)/pack.h $(INCDIR)/poly.h $(INCDIR)/verify.h
+HEADERS = $(INCDIR)/ciphertext.h $(INCDIR)/dg.h $(INCDIR)/hash.h $(INCDIR)/hwt.h $(INCDIR)/indcpa.h $(INCDIR)/io.h $(INCDIR)/kem.h $(INCDIR)/key.h $(INCDIR)/pack.h $(INCDIR)/poly.h $(INCDIR)/verify.h $(INCDIR)/toomcook.h $(INCDIR)/cbd.c
 HEADERSKECCAK = $(HEADERS) $(INCDIR)/fips202.h
 INCLUDE = -I./$(INCDIR)
 
@@ -28,30 +28,35 @@ all: \
 	main \
 	speed \
 
-shared: timer.so \
+shared: \
+	TiMER.so \
 
-main: timer-main \
+main: \
+	TiMER-main \
 
-speed: timer-speed \
+speed: \
+	TiMER-speed \
 
-kat: PQCgenKAT_timer \
-
-
-timer.so: $(SOURCESKECCAK) $(HEADERSKECCAK)
-	$(CC) -shared -fPIC $(CFLAGS) -DTIMER_MODE=1 $(SOURCESKECCAK) $(INCLUDE) -o timer.so
-
-timer-main: $(SOURCES_MAIN)
-	$(CC) $(CFLAGS) -DTIMER_MODE=1 $(SOURCES_MAIN) $(INCLUDE) -o timer-main
-
-timer-speed: $(SOURCES_SPEED)
-	$(CC) $(CFLAGS) -DTIMER_MODE=1 $(SOURCES_SPEED) $(INCLUDE) -o timer-speed
+kat: \
+	PQCgenKAT_TiMER \
 
 
-PQCgenKAT_timer: $(SOURCES_KAT)
-	$(CC) $(CFLAGS) -DTIMER_MODE=1 -DCRYPTO_ALGNAME=\"TiMER_KEM\" $(SOURCES_KAT) $(INCLUDE) -o PQCgenKAT_timer -lcrypto
+TiMER.so: $(SOURCESKECCAK) $(HEADERSKECCAK)
+	$(CC) -shared -fPIC $(CFLAGS) -DTiMER_MODE=1 $(SOURCESKECCAK) $(INCLUDE) -o TiMER.so
 
+
+TiMER-main: $(SOURCES_MAIN)
+	$(CC) $(CFLAGS) -DTiMER_MODE=1 $(SOURCES_MAIN) $(INCLUDE) -o TiMER-main
+
+TiMER-speed: $(SOURCES_SPEED)
+	$(CC) $(CFLAGS) -DTiMER_MODE=1 $(SOURCES_SPEED) $(INCLUDE) -o TiMER-speed
+
+
+
+PQCgenKAT_TiMER: $(SOURCES_KAT)
+	$(CC) $(CFLAGS) -DTiMER_MODE=1 -DCRYPTO_ALGNAME=\"TiMER_KEM\" $(SOURCES_KAT) $(INCLUDE) -o PQCgenKAT_TiMER -lcrypto
 
 clean:
-	-$(RM) -rf timer-main
-	-$(RM) -rf timer-speed
-	-$(RM) -rf PQCgenKAT_timer
+	-$(RM) -rf TiMER-main
+	-$(RM) -rf TiMER-speed
+	-$(RM) -rf PQCgenKAT_TiMER
